<resources>
    <string name="app_name">Water Bill Calculator</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="you_have_not_account_register">You have not account ? Register</string>
    <string name="welcome_to_the_app">Welcome to the app!</string>
    <string name="calculate_water">Calculate Water</string>
    <string name="bill_id">Bill ID</string>
    <string name="no_days">No.Days</string>
    <string name="units">Units</string>
    <string name="total">Total</string>
    <string name="bill_id1">Bill ID</string>
    <string name="hint">xx</string>
    <string name="space">-------------------------------------</string>
    <string name="hint30">30</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="no_of_days">No Of Days:</string>
    <string name="units2">Units :</string>
    <string name="totalPrice">Total:</string>
    <string name="delete">Delete</string>
    <string name="water_saving_tips">Water-Saving Tips</string>
    <string name="tip1">1.Repair leaking taps and pipes.</string>
    <string name="tip2">2. Use low-flow showerheads and toilets.</string>
    <string name="tip3">3. Keep showers to 5 minutes or less.</string>
    <string name="tip4">4. Don’t let the water run while brushing teeth or washing dishes.</string>
    <string name="tip5">5. Sweep driveways instead of hosing them down.</string>
    <string name="tip6">6. Water in the morning or evening to reduce evaporation.</string>
    <string name="tip7">7. Plant drought-resistant or native plants.</string>
    <string name="tip8">8. Use the dishwasher and washing machine only when full.</string>
    <string name="tip9">9. Put mulch around plants to keep soil moist.</string>
    <string name="tip10">10. Use barrels to collect rain for watering plants.</string>
    <string name="back">Back</string>
    <string name="tips">Tips</string>
    <string name="water_bill_calculator">Water Bill Calculator</string>
    <string name="calculate_water_bill">Calculate Water Bill</string>
    <string name="calculate_your_water_bill_ease">Calculate your water bill ease!</string>
</resources>