<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gg"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/heading_textview"
            android:layout_width="322dp"
            android:layout_height="53dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="-1dp"
            android:text="@string/calculate_water"
            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>

    <TextView
        android:id="@+id/billID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/bill_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/no_days"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/billID"
        app:layout_constraintTop_toBottomOf="@+id/billID"
        tools:ignore="MissingConstraints"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/units"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/nod"
        app:layout_constraintTop_toBottomOf="@+id/nod"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/units"
        app:layout_constraintTop_toBottomOf="@+id/units"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/bill_id1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/billID"
        app:layout_constraintStart_toEndOf="@+id/billID"
        app:layout_constraintTop_toTopOf="@+id/billID" />

    <EditText
        android:id="@+id/un"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/units"
        app:layout_constraintStart_toStartOf="@+id/nd"
        app:layout_constraintTop_toTopOf="@+id/units" />

    <TextView
        android:id="@+id/tot"
        android:layout_width="209dp"
        android:layout_height="29dp"
        android:text="@string/space"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/total"
        app:layout_constraintStart_toStartOf="@+id/un"
        app:layout_constraintTop_toTopOf="@+id/total" />

    <EditText
        android:id="@+id/nd"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/hint30"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/nod"
        app:layout_constraintStart_toEndOf="@+id/nod"
        app:layout_constraintStart_toStartOf="@+id/id"
        app:layout_constraintTop_toTopOf="@+id/nod" />


    <Button
        android:id="@+id/btn_add"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="360dp"
        android:backgroundTint="#007C05"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tot"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_view"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="350dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tot"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="350dp"
        android:backgroundTint="#E30D0D"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tot"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="412dp"
        android:layout_height="329dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>