<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#4527A0">

    <!-- Background Image -->

    <!-- Overlay -->

    <!-- App Title -->

    <!-- Calculate Button -->

    <!-- App Description -->

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/home" />

    <Button
        android:id="@+id/tips"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_below="@+id/app_description"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="103dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/tips"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="31dp"
        android:text="@string/water_bill_calculator"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@+id/app_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="57dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/calculate_water_bill"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculate_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="13dp"
        android:text="@string/calculate_your_water_bill_ease"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
